force-app/main/default/objects/User_Policy__c/User_Policy__c.object-meta.xml
<CustomObject>
    <description>Northwind customer policy records.</description>
    <label>User Policy</label>
    <nameField>
        <displayFormat>POL-{000000}</displayFormat>
        <label>Policy Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Policies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>