force-app/main/default/objects/User_Policy__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>User Policies</relationshipLabel>
    <relationshipName>User_Policies_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>