force-app/main/default/objects/User_Policy__c/fields/Deductable__c.field-meta.xml
<CustomField>
    <fullName>Deductable__c</fullName>
    <label>Deductible</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>