force-app/main/default/objects/User_Policy__c/fields/Sum_Insured__c.field-meta.xml
<CustomField>
    <fullName>Sum_Insured__c</fullName>
    <label>Sum Insured</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>